tests/snapshots/lexer__delimiters__brackets.snap
---
source: tests/lexer.rs
expression: "lex(\"[]\")"
---
Ok(
    [
        Token {
            kind: OBracket,
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: CBracket,
            span: Span {
                start: 1,
                end: 2,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 2,
                end: 2,
            },
        },
    ],
)
