tests/snapshots/lexer__delimiters__comma.snap
---
source: tests/lexer.rs
expression: "lex(\",\")"
---
Ok(
    [
        Token {
            kind: Comma,
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 1,
                end: 1,
            },
        },
    ],
)
