tests/snapshots/lexer__delimiters__curly.snap
---
source: tests/lexer.rs
expression: "lex(\"{}\")"
---
Ok(
    [
        Token {
            kind: OCurly,
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: CCurly,
            span: Span {
                start: 1,
                end: 2,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 2,
                end: 2,
            },
        },
    ],
)
