tests/snapshots/lexer__delimiters__dot.snap
---
source: tests/lexer.rs
expression: "lex(\".\")"
---
Ok(
    [
        Token {
            kind: Dot,
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 1,
                end: 1,
            },
        },
    ],
)
