tests/snapshots/lexer__delimiters__parens.snap
---
source: tests/lexer.rs
expression: "lex(\"()\")"
---
Ok(
    [
        Token {
            kind: OParen,
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: CParen,
            span: Span {
                start: 1,
                end: 2,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 2,
                end: 2,
            },
        },
    ],
)
