tests/snapshots/lexer__delimiters__semicolon.snap
---
source: tests/lexer.rs
expression: "lex(\";\")"
---
Ok(
    [
        Token {
            kind: SemiColon,
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 1,
                end: 1,
            },
        },
    ],
)
